test/files/neg/t8322.check
t8322.scala:17: error: diverging implicit expansion for type W[Any]
starting with method jw in trait F
  implicit def wr[E] = jw(implicitly, implicitly)
                                      ^
t8322.scala:19: error: type mismatch;
 found   : String
 required: scala.util.Either[?,?]
  Right(0).right.flatMap(_ => new String())
                              ^
2 errors
